<resources>
    <string name="app_name" translatable="false">Weather IO</string>
    <string name="SensorButton">Your Sensor</string>
    <string name="city" translatable="false">Toronto</string>
    <string name="sensorTemp">Current Temperature</string>
    <string name="sensorHumidity">Current Humidity</string>

    <string name="Temp" translatable="false">20</string>
    <string name="Humidity" translatable="false">55 %</string>
    <string name="add_city">Add City</string>
    <string name="add_sensor">Add Sensor</string>
    <string name="header_title" translatable="false">Weather I/O</string>
    <string name="Name">Your Name ex. John Smith</string>
    <string name="Sensor_Serial_Number">Enter Your Sensor Serial Number</string>
    <string name="Serial_Num">Serial Number ex.12345</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="CityName">City Name</string>
    <string name="cityHint" translatable="false">Toronto</string>
    <string name="countryCode" translatable="false">CA</string>
    <string name="GetWeatherInfo">Get Weather</string>
    <string name="weather">Get Weather</string>
    <string name="info">Info</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="homeScreenIamge">partly cloudy</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="weatherTemp">Temperature</string>
    <string name="weatherHumidity">Humdity</string>
    <string name="weatherMain">Condition</string>
    <string name="weatherDesc">Description</string>
    <string name="aboutText">Weather I/O is app developed by Colin Blakley. This is a project for my Software Project course in Computer Engineering Technology at Humber College</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">"Recommendations for people to contact         based on your message history     "</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="github" translatable="false">Git Hub</string>


</resources>
